# opencord

./: .env.example  .gitignore  Caddyfile.dev  Caddyfile.prod  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml  generate-dev-certs  generate-prod-certs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
server/: Caddyfile  Cargo.toml  Dockerfile  README.md  schema.sql
server/.sqlx/: query-025dfc01825dda9bc23c06489bdba971532c5d95a9ad2d5ee2c57c2adb99a179.json  query-06088663f31a0714f4c64dcc2328fd8813233ca13b339881020ff28c7382d717.json  query-0cc7fbc3529142fc647dbc6e56b423026046b29dd8b31b6c9f818e5be584d756.json  query-0ff026e505389fc4312334eba2e8ab51f91c2496f29b4d789562073ba5cf0f88.json  query-192bbab882ce003847049ff2fe94595e4da3fae74213b3cc8a707bde3951f564.json  query-1f612b9033ba9ff47bcfe182f04c913a240359154f13cee1b2e93687b6dd497c.json  query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json  query-28f337f2a39861f7f2ce3234df332e78342d2b05bb66a2ad61bc00cd5f028ab3.json  query-2d7bbdcae14a47160c0a03978c78a373529518818248cf4f8418f30aba78123b.json  query-2e5dc04dcd3ab223ae729a994e89882d1c4f6d384c9e42941878d664f5fe73f7.json  query-344bb85391d8d30ffb2b7e3fb9d19d3981947dab4c57477a53b160716f99d333.json  query-34a97e98da25e96aa8b5a87c2c2945d6006345a3c7e58bde5ea4f765ba4fb983.json  query-374aba0df4c7d5cdd95119cfd3377ebc2b5fe774738e3568e4de445e178f0c3c.json  query-3c7d259925ed9ed2026bc937759c18268da6fa52627f9f514bf423b753021a73.json  query-3ccb7cb63452bbd18556cc2fc298483098ca862f592208c9bbefc2845006898a.json  query-3f359c0ed0613a26eae0961f47f23c2782328fc06fccc94119cb3a1aa5c23956.json  query-41f8a8cbffb9f7de006fd1a9ccd6a2e920bca8afdf5c24e301f6d568f8d18d21.json  query-425f2849a9a5a8838352e6c8941b27dad265b9e03b1cee0a50fea5d22a73aede.json  query-432a180ebfbba2d7b8773de5fab1af68aaccd8930e1301be4be0ce1c68365347.json  query-45adcac0bb60d2be3c5101e10010da4edfecbbf1722936785010f5d2cd6d415e.json  query-476611a763a73532190a3db308614a9d511028bf88b3c7d50a8e048f5a9da52b.json  query-497e5a4b6fdcbd1d609a32c4015fbbff5c5c7721d6300e9f215a41438a5037ed.json  query-49e49ae2c437104d01f01c036d7ed37e683d13945588080151905bfe928cfb68.json  query-58013dea5d8f6ee225f06b483b731db9e10555a3fdc296532529de2d28369d14.json  query-606364c79e0990deb07dfbe6c32b3d302d083ec5333f3a5ce04113c38a041100.json  query-6210699ef14dbe431c5a5a54b7c02f738d888ffe6a55bf9ec840ccb5bbaab26d.json  query-62333312ce4c6eb4ac09019642f21dd37df0ef79f5aab15683bfe2666209a852.json  query-68d2aa39e7719f7dc0a5b1b86f7481f4199546d9c28f08f271e56d032238ba07.json  query-690d0029b4ce18aa611740e777073b5d50c99bf44541230415d3f147c090ad82.json  query-6b5d30db348572fb3d0316de784bb1d00d3cf7a071336a91bdc05ed19d8ec565.json  query-748cc8298d6315295f0843ce7de47d8d3e8fb364e039ffabaca28e03af4691ba.json  query-8a0d5ec256b760d302f54ff8c3c65a7a347ebf5545724151a27298c1498a0d59.json  query-8d47d62521bf7aecde96c16b94aef732c4360be8741e1fa0ed5e3dd454e1a193.json  query-8e4a982ac705a58413512a1064eb2d9d3e961fc1d7b707da92737380902fd2b8.json  query-8f4bd8bbb53153f02eab96d2678852de094708ee0a0ff89b6780f41226f72cb7.json  query-9d1471e2d7596ce81e25be77280e555afeb64b244ba3a4abada7f40c4b41ea58.json  query-9ea8f8b41d0dbf112f16e5f02b3e6292ad7e3c625d1ffe894f6a00577c5e5816.json  query-9f336db8b38468ad0634ae1afe0e64c2259408da1b3bc1c0f4f37d5b3e453d39.json  query-9f65f5df2ed8c6e7fa54770dfe8708ac27f96e717e2a051e53eaf58722575d1a.json  query-a159228713042dd76754f9c19bb196486e48244f22da4ec11e03cefc53be34f0.json  (+37 more)
server/avatars/: 2  3
server/certs/: generate  localhost.crt  localhost.hex  localhost.key
server/files/: 5
server/migrations/: 20250710194659_init.sql  20260106120534_update_media_type_enum.sql  (+4 more)
(+255 files in other folders)
