[package]
name = "opencord-server"
version = "0.1.0"
edition = "2024"
license.workspace = true


[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.7", features = ["ws", "macros", "multipart"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "time"] }
bcrypt = "0.17.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "fast-rng"] }
time = { version = "0.3.41", features = ["serde"] }
dotenv = "0.15.0"
thiserror = "2.0.11"
tower-http = { version = "0.6.1", features = ["cors", "fs"] }
http = "1.2.0"
futures-util = "0.3.31"
utoipa = { version = "5", features = ["axum_extras", "time"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
utoipa-axum = "0.2.0"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22.1"
rmp-serde = "1.3.0"
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
livekit-api = "0.4.11"
livekit-protocol = "0.6.0"
emojis = "0.8.0"
infer = "0.19"
imagesize = "0.13"

[dev-dependencies]
